--- a/model/src/main/resources/api-dee-base-parse-internal.yaml
+++ b/model/src/main/resources/api-dee-base-parse-internal.yaml
@@ -12,6 +12,15 @@ tags:
 paths:
   /v1/internal/flr/action/export:
     post:
+      x-dm-role: 'N'
+      x-impact-subsystem: 影响
+      x-access-port: 8085
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
       tags:
         - Download Management
       summary: 导出
@@ -42,7 +51,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
 securityDefinitions:
   Authorization:
     type: apiKey
@@ -50,51 +58,75 @@ securityDefinitions:
     in: header
 definitions:
   ExportCopyInfo:
-    type: object
-    required:
-      - resourceSubType
-      - snapshots
-      - userId
-      - uuid
     properties:
       resourceSubType:
         type: string
+        minLength: 1
+        maxLength: 64
       snapshots:
         type: array
         items:
           $ref: '#/definitions/SnapshotInfo'
           originalRef: SnapshotInfo
+        minItems: 1
       userId:
         type: string
+        minLength: 1
+        maxLength: 128
       uuid:
         type: string
+        minLength: 1
+        maxLength: 128
     title: ExportCopyInfo
+    required:
+      - resourceSubType
+      - snapshots
+      - userId
+      - uuid
   ExportRequest:
     properties:
+      requestId:
+        type: string
+        minLength: 1
+        maxLength: 128
+        description: 请求ID
+      recordId:
+        type: string
+        description: 记录ID
+        minLength: 1
+        maxLength: 128
       copyInfo:
         $ref: '#/definitions/ExportCopyInfo'
         originalRef: ExportCopyInfo
+        description: 副本信息
       paths:
         type: array
         items:
           type: string
-      requestId:
-        type: string
+          minLength: 1
+          maxLength: 4096
+        minItems: 1
+        maxItems: 1024
+        description: 下载路径
     title: ExportRequest
     required:
+      - requestId
+      - recordId
       - copyInfo
       - paths
-      - requestId
   SnapshotInfo:
-    type: object
-    required:
-      - id
-      - parentName
     properties:
       id:
         type: string
         description: 快照id
+        minLength: 1
+        maxLength: 128
       parentName:
         type: string
         description: 快照文件系统名称
+        minLength: 1
+        maxLength: 1024
     title: SnapshotInfo
+    required:
+      - id
+      - parentName
