--- a/api/internal/api-dee-global-search-internal.yaml
+++ b/api/internal/api-dee-global-search-internal.yaml
@@ -1,124 +1,158 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  version: "v1"
-  title: "DEE GlobalSearch Internal API Document"
+  version: v1
+  title: DEE GlobalSearch Internal API Document
   contact: {}
   license: {}
-host: "localhost"
-basePath: "/"
+host: localhost
+basePath: /
 tags:
-- name: "File Level Search Management"
-  description: "File Level Search Controller"
+  - name: File Level Search Management
+    description: File Level Search Controller
 paths:
   /v1/internal/search/file:
     post:
+      x-dm-role: 'N'
+      x-impact-subsystem: 影响
+      x-access-port: 8086
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
       tags:
-      - "File Level Search Management"
-      summary: "细粒度文件搜索"
-      operationId: "browseFileUsingPOST"
+        - File Level Search Management
+      summary: 细粒度文件搜索
+      operationId: browseFileUsingPOST
       consumes:
-      - "application/json"
+        - application/json
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - in: "body"
-        name: "request"
-        description: "request"
-        required: true
-        schema:
-          originalRef: "FileLevelSearchRequest"
-          $ref: "#/definitions/FileLevelSearchRequest"
-      - name: "userId"
-        in: "query"
-        description: "userId"
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "OK"
+        - in: body
+          name: request
+          description: request
+          required: true
           schema:
-            type: "object"
-        "201":
-          description: "Created"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
-        "404":
-          description: "Not Found"
+            originalRef: FileLevelSearchRequest
+            $ref: '#/definitions/FileLevelSearchRequest'
+        - name: userId
+          in: query
+          description: userId
+          required: true
+          type: string
+          minLength: 1
+          maxLength: 128
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       security:
-      - Authorization:
-        - "global"
-      deprecated: false
+        - Authorization:
+            - global
 securityDefinitions:
   Authorization:
-    type: "apiKey"
-    name: "TOKEN"
-    in: "header"
+    type: apiKey
+    name: TOKEN
+    in: header
 definitions:
   FileLevelSearchRequest:
-    type: "object"
     properties:
       chainId:
-        type: "string"
-        description: "副本链ID"
+        type: string
+        description: 副本链ID
+        minLength: 1
+        maxLength: 128
       copyId:
-        type: "string"
-        description: "副本ID"
+        type: string
+        description: 副本ID
+        minLength: 1
+        maxLength: 128
       generatedBy:
-        type: "string"
-        description: "副本生成方式"
+        type: string
+        description: 副本生成方式
+        minLength: 1
+        maxLength: 64
       gn:
-        type: "integer"
-        format: "int64"
-        description: "副本gn"
+        type: integer
+        format: int64
+        description: 副本gn
       nodeType:
-        type: "array"
+        type: array
         example:
-        - 1
-        description: "文件类型列表。 1：文件，2：文件夹，3：链接"
+          - 1
+        description: 文件类型列表。 0：文件夹，1：文件，2：链接
         items:
-          type: "integer"
-          format: "int32"
+          type: integer
+          format: int32
+        enum:
+          - 0
+          - 1
+          - 2
       orderBy:
-        type: "string"
-        description: "排序字段"
+        type: string
+        description: 排序字段
+        minLength: 1
+        maxLength: 1024
       orderType:
-        type: "string"
-        description: "排序类型。“asc”或“desc”，默认为“asc”。"
+        type: string
+        description: 排序类型。“asc”或“desc”，默认为“asc”。
+        enum:
+          - asc
+          - desc
       pageNo:
-        type: "integer"
-        format: "int32"
+        type: integer
+        format: int32
         example: 0
-        description: "分页页面编码"
+        description: 分页页面编码
+        minimum: 0
       pageSize:
-        type: "integer"
-        format: "int32"
+        type: integer
+        format: int32
         example: 10
-        description: "分页数据条数"
+        description: 分页数据条数
+        maximum: 1024
       path:
-        type: "string"
-        description: "文件路径"
+        type: string
+        description: 文件路径
+        minLength: 1
+        maxLength: 4096
       resourceId:
-        type: "string"
-        description: "资源ID"
+        type: string
+        description: 资源ID
+        minLength: 1
+        maxLength: 128
       resourceName:
-        type: "string"
-        example: "vm_1234"
-        description: "资源名称"
+        type: string
+        example: vm_1234
+        description: 资源名称
+        minLength: 1
+        maxLength: 1024
       resourceType:
-        type: "array"
+        type: array
         example:
-        - 0
-        - 1
-        - 2
-        description: "资源类型列表"
+          - 0
+          - 1
+          - 2
+        description: 资源类型列表
         items:
-          type: "integer"
-          format: "int32"
+          type: integer
+          format: int32
+        maxItems: 1000
       searchKey:
-        type: "string"
-        example: "my document"
-        description: "搜索关键字，将会搜索出包含这个关键字的所有文件。"
-    title: "FileLevelSearchRequest"
+        type: string
+        example: my document
+        description: 搜索关键字，将会搜索出包含这个关键字的所有文件。
+        minLength: 1
+        maxLength: 64
+    title: FileLevelSearchRequest
