--- a/api/external/api-sla.yaml
+++ b/api/external/api-sla.yaml
@@ -316,7 +316,35 @@ definitions:
       ext_parameters:
         allOf:
           - $ref: '#/definitions/BaseExtendParam'
-        description: 扩展参数
+        description: |-
+          扩展参数:
+          备份策略扩展参数主要参数key定义：
+          qos_id : 限速策略id 非必传
+          auto_retry : 是否开启自动重试   integer  必传
+          auto_retry_times : 自动重试次数  integer  非必传
+          auto_retry_wait_minutes: 自动重试等待时间(分钟) integer 非必传
+          job_failed_alarm : 是否开启任务失败告警   boolean 必传
+          deduplication : 是否开启目标端重复删除  boolean 必传
+          source_deduplication : 源端重复数据删除  boolean 必传
+
+          复制策略扩展参数key说明
+          qos_id : 限速策略id 非必传
+          external_system_id : 外部复制集群id 必传
+          link_deduplication : 是否开启复制链路重删 必传
+          link_compression : 是否开启复制链路压缩 必传
+
+          归档扩展参数：
+          qos_id : 限速策略id 非必传
+          storage_id：归档存储id，非必传
+          auto_retry : 是否开启自动重试   integer  必传
+          auto_retry_times : 自动重试次数  integer  非必传
+          auto_retry_wait_minutes: 自动重试等待时间(分钟) integer 非必传
+          archive_target_type：副本归档类型  integer  1归档所有副本 2指定副本归档
+          archiving_scope：归档所有副本-归档范围，取值"latest","all_no_archiving",非必传
+          network_access：网络加速，boolean 非必传
+          delete_import_copy：归档后删除原导入副本，  boolean 非必传
+          protocol：归档存储类型，integer枚举[0, 1, 2, 3, 4, 5, 6, 7]
+          auto_index: 是否开启自动索引 boolean 非必传
         title: Ext Parameters
       name:
         description: 策略名称
@@ -342,12 +370,11 @@ definitions:
         format: uuid
         title: Uuid
         type: string
+    title: Policy
     required:
       - name
       - schedule
       - type
-    title: Policy
-    type: object
   PolicyActionEnum:
     description: An enumeration.
     enum:
